--- a/views/smash/new.liquid
+++ b/views/smash/new.liquid
@@ -168,7 +168,7 @@
             <!-- <input type="text" name="description" placeholder="Describe the fighter" value="{{fighter.description}}"> -->
             <textarea name="description" placeholder="Describe the fighter"></textarea>
         </fieldset>
-        <input type="submit" value="create fighter">   
+        <input id="create" type="submit" value="create fighter">   
     </div>
 
     <div class="moveset">
