--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -33,9 +33,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="/app.js" defer></script>
-    
-    <style>
-    </style>
 
   </head>
 
@@ -44,7 +41,7 @@
       <nav>
         <div class="logo">
           <h1>BUILD-A-BRO</h1>
-          <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fvignette1.wikia.nocookie.net%2Fnintendo%2Fimages%2F7%2F70%2FSmash_Logo.png%2Frevision%2Flatest%3Fcb%3D20150610044606%26path-prefix%3Den&f=1&nofb=1" alt="invitation letter">
+          <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fvignette1.wikia.nocookie.net%2Fnintendo%2Fimages%2F7%2F70%2FSmash_Logo.png%2Frevision%2Flatest%3Fcb%3D20150610044606%26path-prefix%3Den&f=1&nofb=1" alt="smash ball">
         </div>
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
