--- a/public/styles.css
+++ b/public/styles.css
@@ -46,7 +46,7 @@ body {
   }
 
 /* ============= NAV BAR =================== */
-
+/* credit goes to Deltaty Code https://github.com/Deltaty-Code/Humburger-Menu */
 .logo {
     display: flex;
     justify-content: space-between;
